buildpacks/nodejs-engine/tests/snapshots/simple_indexjs.snap
---
source: test_support/src/lib.rs
---
## Heroku Node.js Engine

- Checking Node.js version
  - Node.js version not specified, using `22.x`
  - Resolved Node.js version: `22.17.1`
- Installing Node.js distribution
  - GET https://nodejs.org/download/release/v22.17.1/node-v22.17.1-<arch>.tar.gz ... (OK)
  - Downloading ... (<time_elapsed>)
  - Verifying checksum
  - Extracting Node.js `22.17.1 (<arch>)`
  - Installing Node.js `22.17.1 (<arch>)` ... (<time_elapsed>)
- Done (finished in <time_elapsed>)
